change query file extension

--- a/SHACL-ACL.ipynb
+++ b/SHACL-ACL.ipynb
@@ -75,7 +75,7 @@
     "import shaclacl\n",
     "SCHEMA_DIR = 'shapes/'\n",
     "SOURCE_DESCRIPTION = 'config/rdfmts.json'\n",
-    "QUERY = 'data/query.rd'"
+    "QUERY = 'data/query.rq'"
    ]
   },
   {
