--- a/SHACL-ACL.ipynb
+++ b/SHACL-ACL.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "## Why SHACL-ACL?\n",
     "\n",
-    "Private data on the Web needs to be protected against unauthorized access. The _Open Digital Rights Language_ (ODRL) [\\[4\\]](#4) is designed for that purpose. However, the evaluation of ODRL policies is not explained in the specification and, hence, the semantics of different implementations may not be the same. Additionally, only data from the policy or known to the evaluation system can be considered for reaching a conclusion whether the access should be granted or denied. SHACL-ACL relies exclusively on concepts and techniques well-known in the Semantic Web community. Using SHACL to specify the access control policies gives the benefit of a clear semantics for the policy evaluation. Furthermore, utilizing the _RDF Mapping Language_ (RML) [\\[5\\]](#5), SHACL-ACL can consider external data during the decision-making process."
+    "Private data on the Web needs to be protected against unauthorized access. The _Open Digital Rights Language_ (ODRL) [\\[4\\]](#4) is designed for that purpose. However, the evaluation of ODRL policies is not explained in the specification and, hence, the semantics of different implementations may not be the same. Additionally, only data from the policy or known to the evaluation system can be considered for reaching a conclusion whether the access should be granted or denied. SHACL-ACL relies exclusively on concepts and techniques well-known in the Semantic Web community. Using SHACL to specify the access control policies gives the benefit of a clear semantics for the policy evaluation [\\[5\\]](#5). Furthermore, utilizing the _RDF Mapping Language_ (RML) [\\[6\\]](#6), SHACL-ACL can consider external data during the decision-making process."
    ]
   },
   {
@@ -51,9 +51,9 @@
    "source": [
     "First, the requirements are installed, the code of SHACL-ACL is imported, and some reoccurring variables are set.\n",
     "SHACL-ACL uses the following tools:\n",
-    "  - a modified version of the SDM-RDFizer [\\[6\\]](#6) for collecting JSON data from Web APIs and returning an RDFLib graph (i.e., a virtual KG) instead of generating a file with the RDF triples\n",
-    "  - Trav-SHACL [\\[7\\]](#7) for validating the SHACL shape schema\n",
-    "  - DeTrusty [\\[8\\]](#8) for executing the SPARQL query if the access is granted"
+    "  - a modified version of the SDM-RDFizer [\\[7\\]](#7) for collecting JSON data from Web APIs and returning an RDFLib graph (i.e., a virtual KG) instead of generating a file with the RDF triples\n",
+    "  - Trav-SHACL [\\[8\\]](#8) for validating the SHACL shape schema\n",
+    "  - DeTrusty [\\[9\\]](#9) for executing the SPARQL query if the access is granted"
    ]
   },
   {
@@ -360,13 +360,15 @@
     "\n",
     "<a name=\"4\">\\[4\\]</a> ODRL Specification. 2018. URL: [https://www.w3.org/TR/2018/REC-odrl-model-20180215/](https://www.w3.org/TR/2018/REC-odrl-model-20180215/).\n",
     "\n",
-    "<a name=\"5\">\\[5\\]</a> A. Dimou, M. Vander Sande, P. Colpaert, R. Verborgh, E. Mannes, R. Van de Walle. RML: A Generic Language for Integrated RDF Mappings of Heterogeneous Data. In: Proceedings of the Workshop on Linked Data on the Web co-located with WWW, CEUR-WS, Aachen, Germany, 2014. URL: [https://ceur-ws.org/Vol-1184/ldow2014_paper_01.pdf](https://ceur-ws.org/Vol-1184/ldow2014_paper_01.pdf).\n",
+    "<a name=\"5\">\\[5\\]</a> J. Corman, J.L. Reutter, O. Savković. Semantics and Validation of Recursive SHACL. In: The Semantic Web – ISWC 2018, Springer, Cham, Switzerland, 2018. DOI: [10.1007/978-3-030-00671-6_19](https://doi.org/10.1007/978-3-030-00671-6_19).\n",
     "\n",
-    "<a name=\"6\">\\[6\\]</a> E. Iglesias, S. Jozashoori, D. Chaves-Fraga, D. Collarana, M.-E. Vidal. SDM-RDFizer: An RML Interpreter for the Efficient Creation of RDF Knowledge Graphs. In: CIKM ’20:Proceedings of the 29th ACM International Conference on Information & Knowledge Management, ACM, New York, NY,USA, 2020. DOI: [10.1145/3340531.3412881](10.1145/3340531.3412881).\n",
+    "<a name=\"6\">\\[6\\]</a> A. Dimou, M. Vander Sande, P. Colpaert, R. Verborgh, E. Mannes, R. Van de Walle. RML: A Generic Language for Integrated RDF Mappings of Heterogeneous Data. In: Proceedings of the Workshop on Linked Data on the Web co-located with WWW, CEUR-WS, Aachen, Germany, 2014. URL: [https://ceur-ws.org/Vol-1184/ldow2014_paper_01.pdf](https://ceur-ws.org/Vol-1184/ldow2014_paper_01.pdf).\n",
     "\n",
-    "<a name=\"7\">\\[7\\]</a> M. Figuera, P.D. Rohde, M.-E. Vidal. Trav-SHACL: Efficiently Validating Networks of SHACL Constraints. In: The Web Conference, ACM, New York, NY,USA, 2021. DOI: [10.1145/3442381.3449877](10.1145/3442381.3449877).\n",
+    "<a name=\"7\">\\[7\\]</a> E. Iglesias, S. Jozashoori, D. Chaves-Fraga, D. Collarana, M.-E. Vidal. SDM-RDFizer: An RML Interpreter for the Efficient Creation of RDF Knowledge Graphs. In: CIKM ’20:Proceedings of the 29th ACM International Conference on Information & Knowledge Management, ACM, New York, NY,USA, 2020. DOI: [10.1145/3340531.3412881](https://doi.org/10.1145/3340531.3412881).\n",
     "\n",
-    "<a name=\"8\">\\[8\\]</a> P.D. Rohde. DeTrusty v0.11.2. 2023. DOI: [10.5281/zenodo.7670670](10.5281/zenodo.7670670)."
+    "<a name=\"8\">\\[8\\]</a> M. Figuera, P.D. Rohde, M.-E. Vidal. Trav-SHACL: Efficiently Validating Networks of SHACL Constraints. In: The Web Conference, ACM, New York, NY,USA, 2021. DOI: [10.1145/3442381.3449877](https://doi.org/10.1145/3442381.3449877).\n",
+    "\n",
+    "<a name=\"9\">\\[9\\]</a> P.D. Rohde. DeTrusty v0.11.2. 2023. DOI: [10.5281/zenodo.7670670](https://doi.org/10.5281/zenodo.7670670)."
    ]
   }
  ],
