--- a/SHACL-ACL.ipynb
+++ b/SHACL-ACL.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "## Demo: Use Case Description\n",
     "\n",
-    "For this demonstration of SHACL-ACL, a SPARQL query returning the life expectancy of Germany for the last three years should be executed over the data from World Bank. The endpoint containing the World Bank data comprises 250,097,215 RDF triples. However, the following conditions need to be met in order for the access to be granted so that the query can be executed:\n",
+    "For the demonstration of SHACL-ACL, a SPARQL query returning the life expectancy of Germany for the last three years should be executed over the data from World Bank. The endpoint containing the World Bank data comprises 250,097,215 RDF triples. The World Bank data states per year and country the value of several indicators, e.g., life expectancy, population, inflation, and age distribution. The knowledge graph contains the data for 1,436 different indicators for 265 countries covering the years 1960 to 2021. Some indicators are not available for all year, e.g., the life expectancy of Germany in 2021, leading to an average of 711.225 recorded indicators per country per year. The following conditions need to be met in order for the access to be granted so that the previously mentioned query can be executed:\n",
     "\n",
     "- The local time, i.e., where the script is executed, needs to be between 7 pm and 6 am.\n",
     "- The local CPU usage must be below 30%.\n",
